--- a/darce.github.io--next-js-pages-router/styles/landingPage.module.scss
+++ b/darce.github.io--next-js-pages-router/styles/landingPage.module.scss
@@ -31,6 +31,7 @@
 
     img {
         border-radius: 50%;
+        image-rendering: pixelated;
     }
 
     @media (max-width: $mobileMax) {
